--- a/src/components/food_item/FoodItem.css
+++ b/src/components/food_item/FoodItem.css
@@ -2,11 +2,17 @@
   width: 100%;
   height: 100%;
   padding: 10px;
-  border-radius: 15px;
+  border-radius: 5px;
   box-shadow: 0px 0px 10px #00000015;
   transition: 0.3s;
   animation: fadeIn 1s;
   background-color: white;
+}
+
+.food-item:hover {
+  box-shadow: 0px 0px 10px #ff672b15;
+  border: 1px solid tomato;
+  transform: scale(1.04);
 }
 
 p {
@@ -15,18 +21,17 @@ p {
 
 .food-item .food-item-img-container {
   width: 100%;
-  height: 200px;
-  border-radius: 15px;
+  height: 150px;
+  border-radius: 5px;
   cursor: pointer;
 }
 
 .food-item .food-item-img-container .food-item-image {
   width: 100%;
   height: 100%;
-  padding: 6px;
-  border-radius: 15px;
+  padding: 1px;
+  border-radius: 5px;
   object-fit: fill;
-  transition: transform 0.3s ease-in-out;
   display: block;
 }
 
@@ -35,12 +40,12 @@ p {
 }
 
 .food-item-info {
-  padding: 10px;
+  padding: 5px 2px;
 }
 
 .food-item-name p {
   max-width: 100%;
-  font-size: 17px;
+  font-size: 0.8em;
   font-weight: 500;
   white-space: nowrap;
   overflow: hidden;
@@ -53,20 +58,20 @@ p {
 }
 
 .price-and-quantity {
-  margin-top: 20px;
+  margin-top: 5px;
   margin-bottom: 10px;
 }
 
 .food-item-info .food-item-price {
   color: red;
-  font-size: 15px;
+  font-size: 0.85em;
   font-weight: 500;
   margin-top: 5px;
   margin-bottom: 5px;
 }
 
 .food-item-info .food-item-quantity {
-  font-size: 13px;
+  font-size: 0.7em;
   font-weight: 500;
 }
 
@@ -74,14 +79,14 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 15px;
+  gap: 5px;
 }
 
 .button-in-item button {
   border: 1px solid rgb(255, 255, 255);
-  padding: 5px 15px;
+  padding: 5px 10px;
   color: white;
-  font-size: 12px;
+  font-size: 0.7em;
 }
 
 .button-in-item button:hover {
