--- a/src/page/food_card/Food_card.css
+++ b/src/page/food_card/Food_card.css
@@ -18,6 +18,7 @@
   display: flex;
   max-width: 1200px;
   margin: auto;
+  border-radius: 15px;
 }
 
 .category-section {
@@ -68,10 +69,19 @@
   text-align: center;
   background-color: #fff;
   box-sizing: border-box;
-  height: fit-content;
+  height: 330px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  transition: 0.3s;
+  animation: fadeIn 1s;
+}
+
+.food-card:hover {
+  box-shadow: 0px 0px 10px #ff672b15;
+  border: 1px solid tomato;
+  transform: scale(1.04);
+  cursor: pointer;
 }
 
 .food-item-img-container {
