--- a/src/components/food_item/FoodItem.css
+++ b/src/components/food_item/FoodItem.css
@@ -7,12 +7,13 @@
   transition: 0.3s;
   animation: fadeIn 1s;
   background-color: white;
+  transition: all 0.3s;
 }
 
 .food-item:hover {
   box-shadow: 0px 0px 10px #ff672b15;
   border: 1px solid tomato;
-  transform: scale(1.04);
+  transform: scale(1.08);
 }
 
 p {
@@ -24,6 +25,7 @@ p {
   height: 150px;
   border-radius: 5px;
   cursor: pointer;
+  transition: all;
 }
 
 .food-item .food-item-img-container .food-item-image {
