--- a/src/page/order/Order.css
+++ b/src/page/order/Order.css
@@ -1,6 +1,7 @@
 .website-name {
   color: tomato;
-  font-weight: 700;
+  font-weight: 600;
+  font-size: 1.5em;
 }
 
 .font-size-default {
@@ -8,8 +9,8 @@
 }
 
 .ic_edit_order {
-  width: 28px;
-  height: 28px;
+  width: 20px;
+  height: 20px;
   transition: all 0.2s;
 }
 
@@ -24,7 +25,8 @@
 }
 
 .font-size-top {
-  font-size: 1.4rem;
+  font-size: 1.1rem;
+  font-weight: 550;
 }
 
 .check-out-img-general {
@@ -71,6 +73,11 @@
   background-color: white;
 }
 
+.input-name {
+  font-size: 0.9em;
+  font-weight: 550;
+}
+
 .form-group-note .form-control-note {
   border-radius: 3px;
   margin-right: 15px;
@@ -93,6 +100,8 @@
   border: none;
   border-radius: 0%;
   border-bottom: 1px solid black;
+  padding: 2px 15px;
+  font-weight: 300;
 }
 
 .form-group-voucher .form-control-coupon {
@@ -184,6 +193,7 @@
   border: 1px solid;
   color: white;
   font-size: 0.9rem;
+  border-radius: 0px;
 }
 
 .button-go-to-cart button {
@@ -211,6 +221,10 @@
 
 .popup-inner {
   border-radius: 10px;
+}
+
+.input-checkout-infor {
+  font-size: 0.9em;
 }
 
 .form-group .input-checkout-infor:focus {
@@ -245,17 +259,33 @@
 }
 
 .button-buy {
-  padding: 5px 20px;
+  padding: 5px 25px;
   margin: 5px;
   border: none;
   background-color: rgb(38, 174, 0);
   color: white;
   cursor: pointer;
-  border-radius: 4px;
+  border-radius: 0px;
+  font-size: 0.9em;
 }
 
 .button-buy:hover {
   background-color: rgb(31, 142, 0);
+}
+
+.button-cancel-order {
+  padding: 5px 25px;
+  margin: 5px;
+  border: none;
+  background-color: #333;
+  color: white;
+  cursor: pointer;
+  border-radius: 0px;
+  font-size: 0.9em;
+}
+
+.button-cancel-order:hover {
+  background-color: #848484;
 }
 
 .popup-order {
@@ -274,9 +304,13 @@
 .popup-content-order {
   background-color: white;
   padding: 20px;
-  border-radius: 8px;
   width: 500px;
   text-align: center;
+}
+
+.info-buy {
+  font-size: 1.1em;
+  font-weight: 450;
 }
 
 .coupon-popup-overlay {
@@ -285,7 +319,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5); /* Làm mờ nền */
+  background: rgba(0, 0, 0, 0.5);
   z-index: 9998;
 }
 
