--- a/src/page/blog_detail/BlogDetail.css
+++ b/src/page/blog_detail/BlogDetail.css
@@ -12,11 +12,11 @@ body {
   cursor: pointer;
 }
 
-.ic-delete:hover{
+.ic-delete:hover {
   color: rgb(255, 137, 137);
 }
 
-.ic-delete:active{
+.ic-delete:active {
   color: rgb(223, 0, 0);
 }
 
@@ -24,9 +24,98 @@ body {
   font-size: 18px;
 }
 
+.reply:hover {
+  cursor: pointer;
+  background-color: #c3c3c3;
+  color: #333;
+}
+
+.reply:active {
+  color: white;
+  background-color: #5f5f5f;
+}
+
+.input-reply {
+  margin-top: -15px;
+}
+
 .comment-time {
   font-weight: 400;
   font-size: 0.9em;
+}
+
+.reply-list {
+  margin-left: 40px;
+  padding-top: 10px;
+}
+
+.reply-item {
+  border-left: 2px solid #ddd;
+  padding-left: 10px;
+  margin-top: 5px;
+}
+
+.reply-header {
+  display: flex;
+  align-items: center;
+}
+
+.reply-avatar {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.reply-user {
+  font-weight: bold;
+}
+
+.reply-time {
+  font-size: 0.8em;
+  color: gray;
+  margin-left: 10px;
+}
+
+.reply-content {
+  margin-left: 40px;
+  font-size: 0.9em;
+}
+
+.button-show {
+  font-size: 0.82em;
+}
+
+.show-reply {
+  padding: 5px 10px;
+  border: 1px solid gray;
+  background-color: #727272;
+  color: white;
+}
+
+.show-reply:hover {
+  background-color: #c3c3c3;
+  color: #333;
+}
+
+.reply {
+  padding: 5px 15px;
+  border: 1px solid gray;
+  background-color: #5f5f5f;
+  color: white;
+}
+
+.no-reply {
+  font-size: 0.85em;
+}
+
+.comment-info {
+  margin-bottom: 8px;
+  margin-top: -8px;
+}
+
+.ic-reply {
+  padding-bottom: 15px;
 }
 
 .header-blog-detail {
@@ -444,7 +533,8 @@ body {
   .blog-content h2 {
     font-size: 0.8em;
   }
-  .blog-content ul, .blog-content ol {
+  .blog-content ul,
+  .blog-content ol {
     margin-left: 0px !important;
   }
   .blog-content ol,
