--- a/src/components/food_item/FoodItem.css
+++ b/src/components/food_item/FoodItem.css
@@ -47,7 +47,7 @@ p {
 
 .food-item-name p {
   max-width: 100%;
-  font-size: 0.8em;
+  font-size: 0.95em;
   font-weight: 500;
   white-space: nowrap;
   overflow: hidden;
@@ -69,7 +69,6 @@ p {
   font-size: 0.85em;
   font-weight: 500;
   margin-top: 5px;
-  margin-bottom: 5px;
 }
 
 .food-item-info .food-item-quantity {
@@ -86,13 +85,18 @@ p {
 
 .button-in-item button {
   border: 1px solid rgb(255, 255, 255);
-  padding: 5px 10px;
+  padding: 8px 15px;
   color: white;
-  font-size: 0.7em;
+  font-size: 0.8em;
+  margin-right: 25px;
 }
 
-.button-in-item button:hover {
-  background-color: rgb(250, 177, 164);
+.button-in-item .button-buynow:hover {
+  background-color: rgb(204, 48, 0);
+}
+
+.button-in-item .button-addtocart:hover {
+  background-color: #007104;
 }
 
 .button-in-item button:active {
