--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -14,7 +14,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 150px;
+  height: 100px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -42,14 +42,15 @@
 }
 
 .navbar .logo-navbar {
-  width: 150px;
-  height: 150px;
+  width: 100px;
+  height: 100px;
   padding: 20px;
 }
 
 .navbar .logo-navbar img {
   height: 100%;
   cursor: pointer;
+  padding-left: 60px;
 }
 
 .navbar-menu {
