Responsive phone view
Responsive phone view for width >768 and >480

--- a/src/components/food_item/FoodItem.css
+++ b/src/components/food_item/FoodItem.css
@@ -43,6 +43,8 @@ p {
 
 .food-item-info {
   padding: 5px 2px;
+  display: flex;
+  flex-direction: column;
 }
 
 .food-item-name p {
@@ -60,6 +62,11 @@ p {
 }
 
 .price-and-quantity {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  gap: 5px;
   margin-top: 5px;
   margin-bottom: 10px;
 }
@@ -68,12 +75,14 @@ p {
   color: red;
   font-size: 0.85em;
   font-weight: 500;
-  margin-top: 5px;
+  line-height: 1.2em;
+  margin-top: 5px !important;
 }
 
 .food-item-info .food-item-quantity {
   font-size: 0.7em;
   font-weight: 500;
+  line-height: 1.2em;
 }
 
 .button-in-item {
@@ -136,32 +145,25 @@ a {
   font-weight: bold;
 }
 
+/* Responsive Adjustments */
 @media (max-width: 1281px) {
   .food-item {
     width: 95%;
     height: 200px;
-    border-radius: 5px;
     padding: 0px;
     margin-bottom: 5px;
   }
   .food-item .food-item-img-container {
-    width: 100%;
     height: 100px;
-    border-radius: 5px;
-  }
-  .food-item .food-item-img-container .food-item-image {
-    padding: 0px;
-    border-radius: 5px;
   }
   .food-item-name p {
     font-size: 1em;
   }
   .food-item-info .food-item-price {
-    margin-top: -20px;
     font-size: 0.85em;
+    margin-top: 5px !important;
   }
   .food-item-info .food-item-quantity {
-    margin-top: 0px !important;
     font-size: 0.8em;
   }
   .food-item button {
@@ -171,30 +173,18 @@ a {
 
 @media (max-width: 1025px) {
   .food-item {
-    width: 95%;
     height: 180px;
-    border-radius: 5px;
-    padding: 0px;
-    margin-bottom: 5px;
   }
   .food-item .food-item-img-container {
-    width: 100%;
     height: 100px;
-    border-radius: 5px;
-  }
-  .food-item .food-item-img-container .food-item-image {
-    padding: 0px;
-    border-radius: 5px;
   }
   .food-item-name p {
     font-size: 0.9em;
   }
   .food-item-info .food-item-price {
-    margin-top: -20px;
     font-size: 0.75em;
   }
   .food-item-info .food-item-quantity {
-    margin-top: 0px !important;
     font-size: 0.6em;
   }
   .food-item button {
@@ -204,30 +194,18 @@ a {
 
 @media (max-width: 821px) {
   .food-item {
-    width: 95%;
     height: 180px;
-    border-radius: 5px;
-    padding: 0px;
-    margin-bottom: 5px;
   }
   .food-item .food-item-img-container {
-    width: 100%;
     height: 100px;
-    border-radius: 5px;
-  }
-  .food-item .food-item-img-container .food-item-image {
-    padding: 0px;
-    border-radius: 5px;
   }
   .food-item-name p {
     font-size: 0.9em;
   }
   .food-item-info .food-item-price {
-    margin-top: -20px;
     font-size: 0.75em;
   }
   .food-item-info .food-item-quantity {
-    margin-top: 0px !important;
     font-size: 0.6em;
   }
   .food-item button {
@@ -237,30 +215,18 @@ a {
 
 @media (max-width: 769px) {
   .food-item {
-    width: 95%;
     height: 180px;
-    border-radius: 5px;
-    padding: 0px;
-    margin-bottom: 5px;
   }
   .food-item .food-item-img-container {
-    width: 100%;
     height: 100px;
-    border-radius: 5px;
-  }
-  .food-item .food-item-img-container .food-item-image {
-    padding: 0px;
-    border-radius: 5px;
   }
   .food-item-name p {
     font-size: 0.9em;
   }
   .food-item-info .food-item-price {
-    margin-top: -20px;
     font-size: 0.75em;
   }
   .food-item-info .food-item-quantity {
-    margin-top: 0px !important;
     font-size: 0.6em;
   }
   .food-item button {
@@ -270,30 +236,18 @@ a {
 
 @media (max-width: 416px) {
   .food-item {
-    width: 95%;
     height: 175px;
-    border-radius: 5px;
-    padding: 0px;
-    margin-bottom: 5px;
   }
   .food-item .food-item-img-container {
-    width: 100%;
     height: 100px;
-    border-radius: 5px;
-  }
-  .food-item .food-item-img-container .food-item-image {
-    padding: 0px;
-    border-radius: 5px;
   }
   .food-item-name p {
     font-size: 0.7em;
   }
   .food-item-info .food-item-price {
-    margin-top: -20px;
     font-size: 0.75em;
   }
   .food-item-info .food-item-quantity {
-    margin-top: 0px !important;
     font-size: 0.6em;
   }
   .food-item button {
@@ -303,30 +257,18 @@ a {
 
 @media (max-width: 376px) {
   .food-item {
-    width: 95%;
     height: 175px;
-    border-radius: 5px;
-    padding: 0px;
-    margin-bottom: 5px;
   }
   .food-item .food-item-img-container {
-    width: 100%;
     height: 100px;
-    border-radius: 5px;
-  }
-  .food-item .food-item-img-container .food-item-image {
-    padding: 0px;
-    border-radius: 5px;
   }
   .food-item-name p {
     font-size: 0.7em;
   }
   .food-item-info .food-item-price {
-    margin-top: -20px;
     font-size: 0.75em;
   }
   .food-item-info .food-item-quantity {
-    margin-top: 0px !important;
     font-size: 0.6em;
   }
   .food-item button {
