--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -6,7 +6,7 @@
       rgba(255, 255, 255, 0.5),
       rgba(255, 255, 255, 0.5)
     ),
-    url("fresh.jpg") no-repeat;
+    url("big-food~.png") no-repeat;
   background-size: cover;
   background-position: center;
   position: relative;
